<resources>
    <string name="app_name">Inventory App Stage 2</string>
    <string name="book">Book</string>
    <string name="book_title">Title</string>
    <string name="price">Price</string>
    <string name="enter_price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Quantity</string>
    <string name="supply_textView">Supply</string>
    <string name="supply_name_editText">Name</string>
    <string name="supply_phone_textView">Phone</string>
    <string name="supply_phone_editText">Phone</string>
    <string name="currency">£</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="inventory_menu_delete">Delete all books</string>
    <string name="editor_menu_save">Save</string>
    <string name="editor_menu_delete">Delete</string>
    <string name="shop_button_text">Shop</string>
    <string name="emptyView_primary_text">Books</string>
    <string name="emptyView_secondary_text1">Your space to fill with books.</string>
    <string name="emptyView_secondary_text2">Start building your collection now.</string>
    <string name="title_details">Title</string>
    <string name="title_input_details">Book Title</string>
    <string name="price_details">Price</string>
    <string name="price_input_details">£40000000</string>
    <string name="quantity_details">In Stock</string>
    <string name="quantity_input_details">40</string>
    <string name="supply_name_details">Supply Name</string>
    <string name="supply_name_input_details">Google books</string>
    <string name="supply_phone_details">Supply Phone</string>
    <string name="supply_phone_input_details">+243 7880640470</string>
    <string name="add_details_button">+</string>
    <string name="minus_details_button">-</string>
    <string name="empty_supplyName_details_textUtils">None</string>
  <string name="shopping_button">Buy</string>
  <string name="call_button">Call</string>
    <string name="emptyView_secondary_text3">Click + to add a new book.</string>
</resources>
