<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_details_activity"
        style="@style/nestedScrollView_details_activity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_details_textView"
                style="@style/title_details_textView"
                android:text="@string/title_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/title_input_details_textView"
                style="@style/title_input_details_textView"
                app:fontFamily="serif-monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/title_details_textView"
                app:layout_constraintTop_toBottomOf="@+id/title_details_textView"
                tools:text="@string/title_input_details" />

            <TextView
                android:id="@+id/price_detail_textView"
                style="@style/price_details_textView"
                android:text="@string/price_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/title_input_details_textView"
                app:layout_constraintTop_toBottomOf="@+id/title_input_details_textView"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/price_input_details_textView"
                style="@style/price_input_details_textView"
                app:fontFamily="serif-monospace"
                app:layout_constraintBottom_toTopOf="@+id/quantity_detail_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/price_detail_textView"
                app:layout_constraintTop_toBottomOf="@+id/price_detail_textView"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/price_input_details" />

            <TextView
                android:id="@+id/quantity_detail_textView"
                style="@style/quantity_details_textView"
                android:text="@string/quantity_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/price_input_details_textView"
                app:layout_constraintTop_toBottomOf="@+id/price_input_details_textView"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/quantity_input_detail_textView"
                style="@style/quantity_input_details_textView"
                android:layout_width="wrap_content"
                app:fontFamily="serif-monospace"
                app:layout_constraintBaseline_toBaselineOf="@+id/minus"
                app:layout_constraintEnd_toStartOf="@+id/add"
                app:layout_constraintStart_toEndOf="@+id/minus"
                tools:text="@string/quantity_input_details" />

            <TextView
                android:id="@+id/supply_name_detail_textView"
                style="@style/supply_name_details_textView"
                android:text="@string/supply_name_details"
                app:layout_constraintBottom_toTopOf="@+id/supply_name_input_details_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/minus"
                app:layout_constraintTop_toBottomOf="@+id/minus"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/supply_name_input_details_textView"
                style="@style/supply_name_input_details_textView"
                app:fontFamily="serif-monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/supply_name_detail_textView"
                app:layout_constraintTop_toBottomOf="@+id/supply_name_detail_textView"
                tools:text="@string/supply_name_input_details" />

            <TextView
                android:id="@+id/supply_phone_details_textView"
                style="@style/supply_phone_details_textView"
                android:text="@string/supply_phone_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/supply_name_input_details_textView"
                app:layout_constraintTop_toBottomOf="@+id/supply_name_input_details_textView"
                tools:targetApi="o" />

            <TextView
              android:id="@+id/supply_phone_input_details_textView"
              style="@style/supply_phone_input_details_textView"
              android:layout_marginTop="8dp"
              app:fontFamily="serif-monospace"
              app:layout_constraintStart_toStartOf="@+id/supply_phone_details_textView"
              app:layout_constraintTop_toBottomOf="@+id/supply_phone_details_textView"
              tools:targetApi="o"
              tools:text="@string/supply_phone_input_details" />

            <android.support.design.button.MaterialButton
                android:id="@+id/add"
                style="@style/add_details_button"
                android:text="@string/add_details_button"
                app:cornerRadius="40dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/quantity_input_detail_textView"
                app:layout_constraintStart_toEndOf="@+id/quantity_input_detail_textView" />

            <android.support.design.button.MaterialButton
                android:id="@+id/minus"
                style="@style/minus_details_button"
                android:text="@string/minus_details_button"
                app:cornerRadius="40dp"
                app:layout_constraintEnd_toStartOf="@+id/quantity_input_detail_textView"
                app:layout_constraintStart_toStartOf="@+id/quantity_detail_textView"
                app:layout_constraintTop_toBottomOf="@+id/quantity_detail_textView" />

            <android.support.design.button.MaterialButton
              android:id="@+id/call"
              style="@style/call_details_buttonIcon"
              android:layout_marginTop="8dp"
              app:cornerRadius="40dp"
              app:icon="@drawable/ic_call"
              app:layout_constraintBottom_toBottomOf="@+id/supply_phone_input_details_textView"
              app:layout_constraintStart_toEndOf="@+id/supply_phone_input_details_textView"
              app:layout_constraintTop_toTopOf="@+id/supply_phone_input_details_textView" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

