<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/product_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/product_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/product_name_text_view" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/product_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/product_name_edit_text" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/price_text_view"
        app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/price_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/price_edit_text" />

    <EditText
        android:id="@+id/quantity_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/_2354"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

    <TextView
        android:id="@+id/supply_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supply_name_textView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/quantity_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/quantity_edit_text" />

    <EditText
        android:id="@+id/supply_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/supply_name_editText"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/supply_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/supply_name_text_view" />

    <TextView
        android:id="@+id/supply_phone_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/supply_phone_textView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/supply_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/supply_name_edit_text" />

    <EditText
        android:id="@+id/supply_phone_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/supply_phone_editText"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/supply_phone_text_view"
        app:layout_constraintTop_toBottomOf="@+id/supply_phone_text_view" />
</android.support.constraint.ConstraintLayout>
